# VEDA_Final_Project

./: .gitignore  CCTV_API_SPECIFICATION.md  Dockerfile.base  Jenkinsfile  PROJECT_SELF_INTRODUCTION_DESCRIPTION.md  README.md  test_3D_map_client.py  test_client.py  test_mqtts.py  test_sunapi_proxy.py  test_thermal_client.py
CCTV/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  README_cpp.md  app_config.h.example  client_gui.py  dummy.cpp  entrance_server.cpp  local_paths.cmake.example  logging.h  main.cpp  main.cu  pointcloud.h  request.h  runner.h  setup_dependencies.ps1  view_ply.py
CCTV/config/: app_config.h.example  local_paths.cmake.example
CCTV/fact/: Technical_Memo_TRT.md  export_da3metric_onnx.py  export_onnx.py  run_tensorrt.py
CCTV/runtime/: command_dispatcher.cpp  command_dispatcher.h  control_server_common.cpp  control_server_common.h  depth_worker.cu  ffmpeg_capture.cpp  ffmpeg_capture.h  ffmpeg_capture_probe.cpp  launch_options.cpp  launch_options.h  launch_runtime_smoke.cpp  logging.cpp  main.cpp  main.cu  net_protocol.cpp  net_protocol.h  pointcloud.h  proxy_server.cpp  proxy_server.h  request.cpp  request.h  request_parser_smoke.cpp  request_validator.cpp  request_validator.h  runner.h  runtime_config.cpp  runtime_config.h  runtime_types.h  server.h  server_bootstrap.cpp  server_bootstrap.h  server_runtime.cpp  server_runtime.h  service_app.cpp  service_app.h  tls_server.cpp  tls_server.h  trt_engine.cpp  trt_engine.h  worker_process.cpp  (+1 more)
CCTV/tools/: run_static_analysis.ps1
CCTV/tools/bootstrap/: setup_dependencies.ps1
CCTV/tools/client/: client_gui.py  mtls_external_test.sh  view_ply.py
CCTV/tools/export/: export_da3metric_onnx.py
Hardware/esp32/main/: CMakeLists.txt  app_secrets.defaults.h  app_secrets.example.h  main.c
Hardware/esp32/main/device/: cmd_uart.c  cmd_uart.h  frame_link.c  frame_link.h  spi.c  spi.h  uart.c  uart.h
Hardware/esp32/main/mqtt/: app_client_config.example.py  laser.txt  motor_control_gui.py  mqtt.c  mqtt.h  mqtt_chunk_dump.py  receive.py  result.md  thermal_view_test.py  udp_stream.c  udp_stream.h  udp_thermal_view_test.py  wifi.c  wifi.h
Qt_Client/: .editorconfig  .gitattributes  .gitignore  Backend.cpp  Backend.h  BackendAuth.cpp  BackendCore.cpp  BackendMedia.cpp  BackendRtsp.cpp  BackendStreamingWs.cpp  BackendSunapi.cpp  CMakeLists.txt  Dockerfile  Dockerfile.base  Header.qml  HeaderWidget.cpp  HeaderWidget.h  LoginScreen.qml  Main.qml  PlaybackScreen.qml  README.md  Sidebar.qml  SidebarWidget.cpp  SidebarWidget.h  StyleHelper.cpp  StyleHelper.h  VideoContainerWidget.cpp  VideoContainerWidget.h  VideoGrid.qml  VideoPlayer.qml  VlcPlayer.cpp  VlcPlayer.h  example.env  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt_Client/include/core/: Backend.h  Team3VideoReceiver.code-workspace
Qt_Client/include/ui/: CaptureHelper.h  QrCodeImageProvider.h
Qt_Client/src/app/: app_icon.rc  main.cpp
Qt_Client/src/core/: Backend.cpp  BackendAuth.cpp  BackendAuthLogin.cpp  BackendAuthRegister.cpp  BackendAuthSession.cpp  BackendCctv3dMap.cpp  BackendCore.cpp  BackendCoreApi.cpp  BackendCoreEnv.cpp  BackendCoreMqtt.cpp  BackendCoreSsl.cpp  BackendCoreState.cpp  BackendInit.cpp  BackendMedia.cpp  BackendMediaRecordings.cpp  BackendMediaStorage.cpp  BackendPlaybackWsRuntime.cpp  BackendRtsp.cpp  BackendRtspConfig.cpp  BackendRtspPlayback.cpp  BackendRtspProbe.cpp  BackendStreamingWs.cpp  BackendSunapi.cpp  BackendSunapiDisplay.cpp  BackendSunapiExportDownload.cpp  BackendSunapiExportFfmpeg.cpp  BackendSunapiExportHttp.cpp  BackendSunapiExportParse.cpp  BackendSunapiExportWsMux.cpp  BackendSunapiExportWsPrep.cpp  BackendSunapiExportWsRtsp.cpp  BackendSunapiExportWsSession.cpp  BackendSunapiPtz.cpp  BackendSunapiTimeline.cpp  BackendSunapiTimelineMonth.cpp  BackendThermal.cpp
Qt_Client/src/core/auth/: BackendAuthLogin.cpp  BackendAuthRecovery.cpp  BackendAuthRegister.cpp  BackendAuthRequestService.cpp  BackendAuthSession.cpp  BackendAuthSessionService.cpp
Qt_Client/src/core/cctv/: BackendCctv3dMap.cpp  BackendCctv3dMapService.cpp  BackendMotorControl.cpp  BackendMotorControlService.cpp
Qt_Client/src/core/core/: BackendCoreApi.cpp  BackendCoreApiService.cpp  BackendCoreCertConfig.cpp  BackendCoreCertConfigService.cpp  BackendCoreEnv.cpp  BackendCoreEnvService.cpp  BackendCoreEvent.cpp  BackendCoreEventLogActionService.cpp  BackendCoreEventLogService.cpp  BackendCoreEventService.cpp  BackendCoreMqtt.cpp  BackendCoreMqttService.cpp  BackendCoreSsl.cpp  BackendCoreSslService.cpp  BackendCoreState.cpp  BackendCoreStateService.cpp  BackendCoreSystemInfo.cpp  BackendCoreSystemInfoService.cpp  BackendInit.cpp  BackendInitService.cpp
Qt_Client/src/core/media/: BackendMediaRecordings.cpp  BackendMediaRecordingsService.cpp  BackendMediaStorage.cpp  BackendMediaStorageService.cpp
Qt_Client/src/core/rtsp/: BackendRtspConfig.cpp  BackendRtspConfigService.cpp  BackendRtspPlayback.cpp  BackendRtspPlaybackService.cpp  BackendRtspProbe.cpp  BackendRtspProbeService.cpp
Qt_Client/src/core/stream/: BackendPlaybackWsRuntime.cpp  BackendPlaybackWsRuntimeService.cpp  BackendStreamingWs.cpp  BackendStreamingWsService.cpp
Qt_Client/src/core/sunapi/: BackendSunapiDisplay.cpp  BackendSunapiDisplayService.cpp  BackendSunapiExportDownload.cpp  BackendSunapiExportDownloadService.cpp  BackendSunapiExportFfmpeg.cpp  BackendSunapiExportFfmpegService.cpp  BackendSunapiExportHttp.cpp  BackendSunapiExportHttpService.cpp  BackendSunapiExportParse.cpp  (+14 more)
Qt_Client/src/ui/: CaptureHelper.cpp
RaspberryPi/k3s-cluster/crow_server/: .dockerignore  2fa_migration.sql  CMakeLists.txt  Dockerfile  README.md  cctv-relay.yaml  crow-cctv-ip-config.example.yaml  crow-db-migration-job.yaml  crow-server.yaml  crow-sunapi-config.example.yaml  crow-sunapi-secret.example.yaml
RaspberryPi/k3s-cluster/thermal_dtls_gateway/: CMakeLists.txt  Dockerfile  README.md  thermal-dtls-gateway.yaml  thermal-dtls-networkpolicy.yaml  thermal-dtls-secret.example.yaml  thermal-dtls-secret.yaml
qt_client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+303 files in other folders)
